[gd_scene load_steps=23 format=3 uid="uid://bsag5y1g02vmd"]

[ext_resource type="Texture2D" uid="uid://bf001c3huv23w" path="res://assets/art/CARN-E.png" id="1_nonsw"]
[ext_resource type="Script" uid="uid://bb4saetp54rkl" path="res://scenes/bossScenes/craneBossScenes/crane_boss.gd" id="1_s0yjc"]
[ext_resource type="Texture2D" uid="uid://nryrfqki41wj" path="res://assets/art/Carne-talking-Sheet.png" id="2_s0yjc"]
[ext_resource type="Texture2D" uid="uid://ccwh0sr8qih3a" path="res://assets/Space/Space Art/Explosion-Sheet-New.png" id="4_r50x6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r50x6"]
height = 4.77344
radius = 2.40967

[sub_resource type="AtlasTexture" id="AtlasTexture_gbskh"]
atlas = ExtResource("1_nonsw")
region = Rect2(0, 0, 450, 530)

[sub_resource type="AtlasTexture" id="AtlasTexture_cht56"]
atlas = ExtResource("2_s0yjc")
region = Rect2(450, 0, 450, 560)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vkge"]
atlas = ExtResource("2_s0yjc")
region = Rect2(0, 0, 450, 560)

[sub_resource type="SpriteFrames" id="SpriteFrames_ns60q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbskh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cht56")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vkge")
}],
"loop": true,
"name": &"other",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s0yjc"]
height = 3.36279
radius = 2.44238

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s0yjc"]
albedo_color = Color(0.886275, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gbskh"]
height = 2.73828
radius = 2.1665

[sub_resource type="AtlasTexture" id="AtlasTexture_ns60q"]
atlas = ExtResource("4_r50x6")
region = Rect2(0, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_eljey"]
atlas = ExtResource("4_r50x6")
region = Rect2(450, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_noirq"]
atlas = ExtResource("4_r50x6")
region = Rect2(900, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_5idq6"]
atlas = ExtResource("4_r50x6")
region = Rect2(1350, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_24ykl"]
atlas = ExtResource("4_r50x6")
region = Rect2(1800, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0dvf"]
atlas = ExtResource("4_r50x6")
region = Rect2(2250, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1i84"]
atlas = ExtResource("4_r50x6")
region = Rect2(2700, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mg7r"]
atlas = ExtResource("4_r50x6")
region = Rect2(3150, 0, 450, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy4w6"]
atlas = ExtResource("4_r50x6")
region = Rect2(3600, 0, 450, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0emw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns60q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eljey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_noirq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5idq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ykl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0dvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1i84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mg7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy4w6")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[node name="craneBoss" type="CharacterBody3D"]
script = ExtResource("1_s0yjc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0859375, 0)
shape = SubResource("CylinderShape3D_r50x6")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
sprite_frames = SubResource("SpriteFrames_ns60q")

[node name="claw" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.46243, 0)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="claw"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.122837, 0.810454, 0)
visible = false
use_collision = true
radius = 1.39014
height = 2.77246

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="claw/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.423038, 0)
operation = 2
radius = 1.34033
height = 5.5542

[node name="clawArea" type="Area3D" parent="claw"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="claw/clawArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.837646, 0)
shape = SubResource("CylinderShape3D_s0yjc")

[node name="geometry" type="Node3D" parent="claw"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1.96769, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(0.768931, -0.639332, 0, 0.639332, 0.768931, 0, 0, 0, 1, -2.16452, -0.181892, 0)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(0.816561, 0.577259, 0, -0.577259, 0.816561, 0, 0, 0, 1, 1.49151, -0.018189, 0)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(0.439735, -0.898127, 3.57962e-08, -0.898127, -0.439735, 7.97582e-08, -5.58921e-08, -6.72221e-08, -1, -2.65562, -2.692, 7.15568e-09)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(0.407629, 0.913147, -4.46147e-08, 0.913147, -0.407629, 7.51816e-08, 5.04656e-08, -7.1386e-08, -1, 1.96921, -2.5283, -7.15568e-09)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(-3.3611e-08, 2.79461e-08, -1, 0.639332, 0.768931, 0, 0.768931, -0.639332, -4.37114e-08, -0.339853, -0.181892, -1.82466)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D6" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(-3.5693e-08, -2.52328e-08, -1, -0.577259, 0.816561, 0, 0.816561, 0.577259, -4.37114e-08, -0.339853, -0.018189, 1.83137)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D7" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(3.66707e-08, 1.0648e-07, 1, -0.898127, -0.439735, 7.97582e-08, 0.439735, -0.898127, 7.95076e-08, -0.339853, -2.692, -2.31577)
size = Vector3(3.97949, 1, 1)

[node name="CSGBox3D8" type="CSGBox3D" parent="claw/geometry"]
transform = Transform3D(-6.82836e-08, 3.14711e-08, 1, 0.913147, -0.407629, 7.51816e-08, 0.407629, 0.913147, -9.03327e-10, -0.339853, -2.5283, 2.30907)
size = Vector3(3.97949, 1, 1)

[node name="barrel" type="CSGCylinder3D" parent="claw"]
visible = false
material = SubResource("StandardMaterial3D_s0yjc")

[node name="playerScanner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -13.1331, 0)

[node name="playScanArea" type="Area3D" parent="playerScanner"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="playerScanner/playScanArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.15618, 0)
shape = SubResource("CylinderShape3D_gbskh")

[node name="clawDropDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="explosionTimer" type="Timer" parent="."]
one_shot = true

[node name="explosionAnim" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.20173, 0)
sprite_frames = SubResource("SpriteFrames_v0emw")
animation = &"explode"

[connection signal="body_entered" from="claw/clawArea" to="." method="_on_claw_area_body_entered"]
[connection signal="body_entered" from="playerScanner/playScanArea" to="." method="_on_play_scan_area_body_entered"]
[connection signal="body_exited" from="playerScanner/playScanArea" to="." method="_on_play_scan_area_body_exited"]
[connection signal="timeout" from="clawDropDelayTimer" to="." method="_on_claw_drop_delay_timer_timeout"]
[connection signal="timeout" from="explosionTimer" to="." method="_on_explosion_timer_timeout"]
